# HexGen_Hex2Spline

./: .gitignore  README.md
Hex2Spline/: ReadMe_Hex2Spline.docx  ReadMe_Quality.docx
Hex2Spline/src/: CMakeLists.txt
Hex2Spline/src/cpp/: BSplineBasis.cpp  BSplineBasis.h  BasicDataStructure.cpp  Elasiticity_3D.cpp  Laplace.cpp  Laplace.h  LeastSquare.h  PDEdata.h  THS_3D.cpp  TTSP_3D.cpp  TTSP_3D.h  kernel.cpp  kernel.h  main.cpp
Hex2Spline/src/cpp_old/: Elasiticity_3D.h  KnotInsertion.cpp  KnotInsertion.h  LeastSquare.cpp  PDEdata.cpp  THS_3D.h  TTSP_3D.cpp  TTSP_3D.h  kernel.cpp  main.cpp
HexGen/: ReadMe_HBECVT_Segmentation.docx  ReadMe_ParametricMapping.docx  ReadMe_Polycube.docx  ReadMe_Quality.docx  ~$adMe_HBECVT_Segmentation.docx  ~$adMe_Polycube.docx
HexGen/1-HBECVT/: readme_CVT.docx  ~$adme_CVT.docx
HexGen/1-HBECVT/io/navair/: navair_NoPillowSmooth_hex.raw  navair_Output_Centroids.txt  navair_output_CleanUp_modified.vtk  navair_output_CleanUp_modified_PatchID.vtk  navair_output_initial.vtk  navair_paraHex_hex.vtk  navair_paraMapping.vtk  navair_realHex_hex.vtk  navair_segment.vtk
HexGen/1-HBECVT/io/navair/input/: navair_Output_SpecialElements.txt  navair_paraHex_hex.raw  navair_tri.raw
HexGen/1-HBECVT/src/cpp/: CVTBasedPolycube.cpp
HexGen/2-POLYCUBE/src/cpp/: Main.cpp  Polycube.cpp
HexGen/3-PARAMETRICMAPPING/: readme.txt
HexGen/3-PARAMETRICMAPPING/src/cpp/: Main.cpp  physical_polycube.cpp  physical_polycube.h
HexGen/4-QUALITY/src/: CMakeLists.txt
HexGen/4-QUALITY/src/cpp/: hex_quality.cpp  main.cpp
example/ant/: ant_hex.vtk  ant_hex_V4_smooth.vtk  ant_initial_read.k  ant_polycube_hex.vtk  ant_polycube_structure_hex.k  ant_tri.k  lspost.cfile  lspost.db  run_ant_demo.bat
example/ant/09062020/: ant_InitialPolycube_V3.k  ant_hex_V4.vtk
example/bust/: bust_InitialPolycubehex.k  bust_initial_read.k  bust_tri.k  lspost.cfile  lspost.db  run_bust_demo.bat
example/engine_mount/: honda1_polycube_hex_V3.vtk  honda1_polycube_hex_V3_opt_opt_smooth_opt.vtk  honda_initial_polycube_hexFIX.k  lspost.cfile  picture_list.org  run_engine_mount_demo.bat
example/fertility/: fertility3_indexPatch_read_V2.k  fertility_InitialPolycubehex.k  fertility_polycube_hex_V2.vtk  fertility_polycube_hex_final_V3.vtk  fertility_tri.k  lspost.cfile  run_fertility_demo.bat
example/hepta/: hepta_hex.raw  hepta_hex_initial.vtk  hepta_initial_read.k  hepta_polycube_structure_hex.k  lspost.cfile  run_hepta_demo.bat
example/honda1/: lspost.db
example/honda2/: picture_list.org
example/joint/: joint_hex.vtk  joint_initial_read.k  joint_manual.txt  joint_polycube_hex_V3.vtk  joint_polycube_structure_hex.k  joint_tri.k  lspost.cfile  run_joint_demo.bat
example/lower_arm/: Honda2_hex_4.vtk  Honda2_hex_final.vtk  honda2_Polycube_V4.k  lspost.cfile  lspost.msg  run_lower_arm_demo.bat
example/mount1/: lspost.cfile  mount1_InitialPolycubehex_V3.k  mount1_hex.vtk  mount1_hex_initial.vtk  mount1_initial_read.k  run_mount1_demo.bat
example/mount2/: lspost.cfile  mount2_hex_initial.vtk  mount2_hex_paper.vtk  mount2_patch_V2.k  mount2_polycube_structure_hex.k  mount2_tri.k  run_mount2_demo.bat
example/rockerarm/: 1.proj  2.proj  lspost.cfile  lspost.db  rockerarm3_indexPatch_V2.k  rockerarm_InitialPolycubehex_V2.k  rockerarm_InitialPolycubehex_V3_edit.k  rockerarm_hex_paper.vtk  rockerarm_indexpatch_read.k  rockerarm_polycube_hex_V2.vtk  run_rockerarm_demo.bat
example/rod/: lspost.cfile  lspost.db  rod.pvsm  rod_InitialPolycubehex.k  rod_initial_read_patch.k  rod_polycube_hex_pillow.vtk  rod_polycube_hex_pillow_smooth_opt.vtk  rod_show_interior.pvsm  rod_show_interior_2.pvsm  rod_show_interior_3.pvsm  rod_show_interior_4.pvsm  rod_show_interior_5.pvsm
example/rod/LSDYNA_eigen/rod/: d3plot  eigen.k  eigout  lspost.cfile  lspost.db  lspost.msg  lspost1.db  messag  rod_hex_gref_lev0-lines.vtk  rod_hex_gref_lev0_CM.vtk  rod_hex_gref_lev0_disp.vtk  sharp.txt
example/rod/LSDYNA_eigen/rod_sharp_feature/: eigen.k  eigout  lspost.cfile  lspost.msg  messag  rod_hex_gref_lev0-lines.vtk  rod_hex_gref_lev0_disp.vtk  rod_hex_gref_lev0_lref_hmesh0_CM.vtk  rod_hex_gref_lev0_lref_hmesh1_CM.vtk  rod_hex_gref_lev0_lref_hmesh2_CM.vtk  rod_hex_gref_lev1_CM.vtk
example/rod/New folder/: picture_list.org
example/rod_demo/: check_tri.raw  lev_rfid.txt  rod_hex.vtk  rod_hex_lap.vtk  rod_hex_lap_pillow.vtk  rod_hex_lap_pillow_smooth.vtk  rod_hex_lap_pillow_smooth_opt.vtk  rod_hex_paper_used.vtk  rod_initial_write.k  rod_manual.txt  rod_polycube_structure.k  rod_polycube_structure_corner.txt  rod_polycube_structure_edge.txt  rod_polycube_structure_face.txt  rod_tri.k  rod_tri_output_CVT.vtk  rod_tri_output_EWCVT.vtk  rod_tri_output_EWCVT_edit.vtk  run_Rod_demo.bat
example/rod_demo/LSDYNA_eigen_result/: binout
